2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-stage.c:
	* gtk/gtk-clutter.c: More docs

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-actor.c: Added some more docs.

2006-06-22  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-clone-texture.c:
	* clutter/clutter-color.c:
	* clutter/clutter-event.c:
	* clutter/clutter-group.c:
	* clutter/clutter-label.c:
	* clutter/clutter-main.c:
	* clutter/clutter-media.c:
	* clutter/clutter-rectangle.c:
	* clutter/clutter-stage.c:
	* clutter/clutter-texture.c:
	* clutter/clutter-timeline.c:
	* clutter/clutter-util.c:
	* clutter/clutter-video-texture.c:
	* configure.ac:
	Documentation updates - add section headers.

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* gtk/gtk-clutter-test.c (main): Don't show the stage.

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* gtk/gtk-clutter.[ch]: Rewrite to use
	clutter_stage_set_xwindow_foreign rather than GtkSocket.

	* gtk/gtk-clutter-test.c: Add fading!1!!!!11! OMGWTFBBQ!!!
	
2006-06-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* examples/video-cube.c (main): Quit on key press.

2006-06-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/Makefile.am: Re-fix distcheck after last commit.

2006-06-21  Matthew Allum  <mallum@openedhand.com>

	* clutter/Makefile.am:
	Make sure clutter.h included.
	* clutter/clutter-stage.c: (clutter_stage_realize),
	(clutter_stage_get_actor_at_pos):
	Select for motion events on X window.
	Return highest rather than lowest found actor for actor_at_pos.
	* examples/Makefile.am:
	Remove test-text, remane test video.
	* examples/README:
	Add info about the included examples.
	* examples/test-video.c:
	* examples/video-player.c:
	Redo test-video a little nicer and rename.
	* examples/video-cube.c: 
	Fix so it at least 'works' again.
	* examples/test.c: 
	Clean up a little.

2006-06-21  Ross Burton  <ross@openedhand.com>

	* Makefile.am: